# ai-infra

./: README.md  hiring-audit-2026-07-15.md  hiring-audit-final-2026-07-15.md  learning-resources-2026-07.md  oss-live-scoring-2026-07-11.md  program-state.md
career-planning/: README.md  career-plan-platform-to-production-ai.md  deep-research-career-1-robotics-vs-agentic.md  deep-research-career-2-evidence-based-plan.md  engineering-career-research-plan.md  platform-and-ai-career-plan.md  tung-platform-agentic-ai-career-plan.md
docs/: ai-infra-24w-transition-deep-research-vi.md
learning/: 00-goal-and-target-roles.md  01-resource-map.md  02-roadmap-12-months.md  03-career-path-3-years.md  brag-doc.md  course-log.md  progress-tracker.md  skill-checklist.md  weekly-schedule.md
learning/blog-drafts/: 00-flagship-agent-control-plane.md  01-agent-workbench.md  02-fintech-backend-guard-agent.md  03-ai-incident-triage-agent.md  README.md
learning/notes/: README.md  _template.md  phase-11-llm-engineering.md  phase-13-tools-protocols.md  phase-14-agent-engineering.md  phase-15-autonomous-systems.md  phase-16-multi-agent.md  phase-17-infra-production.md  phase-18-safety.md
learning/sprints/: sprint-1-agent-foundations.md  sprint-2-tools-protocols.md  sprint-3-production-infra.md  sprint-4-capstone.md
observability/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
observability/grafana/dashboards/: ai-agents.json
observability/grafana/provisioning/dashboards/: provider.yaml
portfolio-planning/: 00-program-charter.md  01-portfolio-architecture.md  02-repository-responsibilities.md  03-dependency-graph.md  04-shared-contracts.md  05-execution-roadmap.md  06-execution-strategy.md  07-integration-milestones.md  08-study-track.md  09-open-source-track.md  10-risk-register.md  11-traceability-matrix.md  12-success-criteria.md  13-evidence-assumptions-and-deviations.md  14-verification-report.md
portfolio-planning/prompts/: 00-serving-contracts-plan.md  01-infergate-plan.md  02-inferbench-plan.md  03-fleetlab-plan.md  04-inferops-plan.md  05-inference-lab-plan.md  06-audit-remediation.md  06-implementation-loop.md
projects/: README.md
projects/agent-workbench/: .env.example  .gitignore  MCP_SECURITY.md  Makefile  README.md  policy.example.yaml  pyproject.toml  requirements.txt
projects/agent-workbench/agent_workbench/: __init__.py  agent.py  audit.py  cli.py  config.py  governor.py  llm.py  mcp_bridge.py  mcp_server.py  metrics.py  permissions.py  policy.py  redaction.py  routing.py  sandbox.py  tracing.py  tracing_otel.py
projects/agent-workbench/agent_workbench/evals/: README.md  __init__.py  runner.py
projects/agent-workbench/agent_workbench/evals/fixtures/: fix_failing_test.json  read_and_summarize.json  write_and_run.json
projects/agent-workbench/agent_workbench/tools/: __init__.py  base.py  fs.py  registry.py  shell.py
projects/agent-workbench/observability/: README.md  docker-compose.yml  otel-collector-config.yaml
projects/agent-workbench/tests/: test_agent_hardening.py  test_agent_loop.py  test_audit.py  test_fs_jail.py  test_governor.py  test_mcp_bridge.py  test_mcp_server.py  test_metrics.py  test_otel_tracing.py  test_permissions.py  test_policy.py  test_redaction.py  test_registry.py  test_routing.py  test_sandbox.py  test_tracing.py
projects/agent-workbench/traces/: .gitkeep
projects/ai-incident-triage-agent/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
projects/ai-incident-triage-agent/evals/: __init__.py  runner.py
projects/ai-incident-triage-agent/evals/fixtures/: ambiguous_close_deploys.json  deploy_caused_errors.json  no_recent_deploy.json
projects/ai-incident-triage-agent/incident_triage/: __init__.py  cli.py  correlate.py  hypotheses.py  metrics.py  models.py  pipeline.py  report.py  signatures.py  tracing.py
projects/ai-incident-triage-agent/tests/: test_correlate.py  test_eval_runner.py  test_hypotheses.py  test_metrics.py  test_models.py  test_pipeline_report.py  test_signatures.py  test_tracing.py
projects/fintech-backend-guard-agent/: Makefile  README.md  pyproject.toml  requirements.txt
projects/fintech-backend-guard-agent/.github/workflows/: pr-review.yml
projects/fintech-backend-guard-agent/evals/: __init__.py  runner.py
projects/fintech-backend-guard-agent/evals/fixtures/: clean.json  clean_pr.json  error_swallow.json  idempotency_audit.json  ledger_txn.json  migration_lock.json  migrations.json  missing_audit.json  missing_idempotency.json  money.json  money_float.json  pii_secret.json  retry_reconcile.json  security.json
projects/fintech-backend-guard-agent/fintech_guard/: __init__.py  checks.py  cli.py  diff.py  findings.py  metrics.py  pipeline.py  pr_comment.py  redaction.py  report.py  reviewer.py  tracing.py
projects/fintech-backend-guard-agent/tests/: test_checks.py  test_diff.py  test_eval_runner.py  test_metrics.py  test_pipeline.py  test_pr_comment.py  test_report.py  test_reviewer.py  test_tracing.py
typora-themes/: README.md  preview.md  rose-pine-dawn.css  rose-pine-moon.css  rose-pine.css
