[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
version = "0.1.0"
description = "A minimal coding-agent harness: agent loop, tool registry, permission gate, tracing, and an eval runner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
# MCP server + client bridge (Sprint 2)
mcp = ["mcp>=1.2"]
# OpenTelemetry GenAI tracing → OTLP (Sprint 2)
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
# Prometheus metrics (Sprint 3)
metrics = ["prometheus-client>=0.20"]
# Policy-as-code loaded from YAML (Sprint 3)
policy = ["pyyaml>=6"]
# Everything needed to run the full test suite.
dev = [
    "pytest>=7",
    "mcp>=1.2",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "prometheus-client>=0.20",
    "pyyaml>=6",
]

[project.scripts]
agent-workbench = "agent_workbench.cli:main"

[tool.setuptools.packages.find]
include = ["agent_workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
