[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-incident-triage-agent"
version = "0.1.0"
description = "A read-only incident-triage assistant for Go/Postgres services: correlate alerts with deploys, propose ranked root causes, blast radius, rollback candidate, and a timeline."
readme = "README.md"
requires-python = ">=3.10"
# Deterministic correlation core has no runtime deps; LLM layer needs anthropic.
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7", "anthropic>=0.40"]

[project.scripts]
incident-triage = "incident_triage.cli:main"

[tool.setuptools.packages.find]
include = ["incident_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
